# Algorithmic-trading-bot

./: CMakeLists.txt  README.md
src/: APIDataHandler.cpp  APIDataHandler.hpp  Backtester.cpp  Backtester.hpp  DataHandler.hpp  ExecutionHandler.hpp  HybridStrategy.hpp  PairsBacktester.cpp  PairsBacktester.hpp  PairsDataHandler.cpp  PairsDataHandler.hpp  PairsExecutionHandler.hpp  PairsTradingStrategy.hpp  Strategy.hpp  config.h  main.cpp  main_pairs.cpp  new.txt
